--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-screens": "^3.20.0",
     "react-native-sound-player": "^0.13.2",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-track-player": "^3.2.0",
     "react-redux": "^8.0.5"
   },
