--- a/app.json
+++ b/app.json
@@ -1,8 +1,5 @@
 {
   "name": "Baby_Flashcards",
-  "displayName": "Baby_Flashcards",
-  "react-native-google-mobile-ads": {
-    "android_app_id": "ca-app-pub-3940256099942544/4411468910",
-    "ios_app_id": "ca-app-pub-3940256099942544/4411468910"
-  }
+  "displayName": "Baby_Flashcards"
 }
+ 
