--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Baby_Flashcards",
-  "displayName": "Baby_Flashcards"
+  "name": "eFlashEnglish",
+  "displayName": "Baby Flashcards for Kids"
 }
  
