--- a/app.json
+++ b/app.json
@@ -1,5 +1,9 @@
 {
   "name": "eFlashEnglish",
-  "displayName": "Baby Flashcards for Kids"
+  "displayName": "Baby Flashcards for Kids",
+   "react-native-google-mobile-ads": {
+    "android_app_id": "ca-app-pub-3339897183017333~4244283582",
+    "ios_app_id": "ca-app-pub-xxxxxxxx~xxxxxxxx"
+  }
 }
  
