--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-device-info": "^10.12.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-google-mobile-ads": "^12.4.0",
     "react-native-gradle-plugin": "^0.71.19",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.5.0",
